# phonkd-bot

./: .gitignore  config.json  main.py  pyproject.toml  readme.MD  requirements.txt  setup.py
discord-bot-framework/: pyvenv.cfg
docs/: api_reference.md
framework/: bot_logger.py  config.json  framework.py  making_the_bot.MD  readme.MD
phonkd_bot/: __init__.py  api_handler.py  bot.py  config.json  readme.MD
phonkd_bot/cogs/: on_message.py
test-venv/: pyvenv.cfg
tests/: config.json  main.py
