[build-system]
requires = [
    "setuptools>=61.0",
    "aiohttp==3.8.6",
    "aiosignal==1.3.1",
    "async-timeout==4.0.3",
    "asyncio==3.4.3",
    "attrs==23.1.0",
    "charset-normalizer==3.3.0",
    "discord==2.3.2",
    "discord.py==2.3.2",
    "frozenlist==1.4.0",
    "idna==3.4",
    "multidict==6.0.4",
    "numpy==1.25.2",
    "pyperclip==1.8.2",
    "typing_extensions==4.7.1",
    "yarl==1.9.2"
]
build-backend = "setuptools.build_meta"

[project]
name = "phonkd_bot"
version = "0.0.1"
authors = [
  { name="Phonki", email="phonkibusiness@gmail.com" },
]
description = "A framework that makes discord bot programming easy"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/RealPhonki/phonkd-bot/tree/main"
"Bug Tracker" = "https://github.com/RealPhonki/phonkd-bot/issues"